# msr

./: .env  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: domain.rs  errors.rs  infra.rs  kernel.rs  lib.rs  main.rs  usecase.rs
src/domain/: msr.rs  repository.rs  song.rs
src/domain/repository/: msr_repository.rs  song_repository.rs
src/errors/: domain.rs  infra.rs
src/infra/: repository.rs
src/infra/repository/: msr.rs  song.rs
src/infra/resource/: database.rs
src/usecase/: add_new_song.rs
